--- a/src/layout/TopBar/components/Drawer/index.module.css
+++ b/src/layout/TopBar/components/Drawer/index.module.css
@@ -1,7 +1,7 @@
 .drawerBox{
   display: none;
   @apply z-50 absolute right-0 top-0 w-1/4 h-screen bg-gray-800
-  transition duration-500 ease-in-out p-3 text-white
+  transition duration-500 ease-in-out p-3 text-white overflow-hidden overflow-y-scroll
 }
 
 /* 用户信息相关 */
